Deployments/Ingress/monitoring.mentor.gg/monitoring-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: elastic-system
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "monitoring-letsencrypt-issuer"

    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: monitoring-ingress-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Monitoring Ingress'

spec:
  tls:
  - hosts:
    - monitoring.mentor.gg
    secretName: monitoring-letsencrypt-key
  rules:
  - host: monitoring.mentor.gg
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-kibana
          servicePort: 5601
